--- a/src/less/common/common.less
+++ b/src/less/common/common.less
@@ -5,3 +5,30 @@
 
 @import './nav.less';
 @import './footer.less';
+
+.main-title {
+    font-size: 42px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.sub-desc {
+    color: @col9;
+    font-size: 24px;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.quote {
+    display: inline-block;
+    width: 57px;
+    height: 53px;
+}
+
+.quote-top {
+    background: url(/images/sprites/quote_top.png) no-repeat center center;
+}
+
+.quote-bottom {
+    background: url(/images/sprites/quote_bottom.png) no-repeat center center;
+}
