--- a/views/_component/footer.html
+++ b/views/_component/footer.html
@@ -45,5 +45,5 @@
             </ul>
         </div>
     </div>
-    <div class="copyright-info">&copy;copyright2017 德速电商物流有限公司 版权所有</d>
+    <div class="copyright-info">&copy;copyright2017 德速电商物流有限公司 版权所有</div>
 </div>
