--- a/src/less/home/home.less
+++ b/src/less/home/home.less
@@ -38,3 +38,210 @@
         background: #005CDA;
     }
 }
+
+.service-container {
+    padding-top: 75px;
+}
+
+.figure-list {
+    margin-top: 55px;
+
+    .figure-item {
+        overflow: hidden;
+        zoom: 1;
+    }
+
+    .item-picture,
+    .item-info {
+        float: left;
+        width: 50%;
+        box-sizing: border-box;
+    }
+
+    .item-picture {
+        overflow: hidden;
+
+        img {
+            display: block;
+            max-width: 100%;
+            transition: transform 2.6s linear;
+        }
+
+        &:hover {
+            img {
+                transform: scale(1.2);
+            }
+        }
+    }
+
+    .item-info {
+        padding: 65px 20px 55px 80px;
+
+        h3 {
+            font-size: 36px;
+            font-weight: bold;
+            padding-bottom: 20px;
+            position: relative;
+
+            &:after {
+                content: '';
+                display: block;
+                width: 50px;
+                height: 6px;
+                background: @activeColor;
+                border-radius: 3px;
+                position: absolute;
+                bottom: 0;
+            }
+        }
+    }
+
+    .info-txt {
+        min-width: 540px;
+        font-size: 18px;
+        line-height: 30px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+
+    .action-btns {
+        margin-top: 35px;
+    }
+
+    .detail-link {
+        width: 125px;
+        height: 40px;
+        text-align: center;
+        line-height: 40px;
+        display: inline-block;
+        color: @activeColor;
+        border: 1px solid @activeColor;
+
+        .detail-arrow {
+            display: inline-block;
+            vertical-align: middle;
+            width: 16px;
+            height: 8px;
+            margin-left: 10px;
+            background: url(/images/sprites/right_arrow.png) no-repeat center center;
+            transition: transform .4s ease;
+        }
+
+        &:hover {
+            .detail-arrow {
+                transform: translateX(6px);
+            }
+        }
+    }
+
+    .figure-right-item {
+
+        .item-info {
+            text-align: right;
+        }
+
+        .item-info {
+            padding: 65px 80px 55px 20px;
+        }
+
+        .info-txt {
+            text-align: right;
+        }
+
+        h3 {
+            &:after {
+                right: 0;
+            }
+        }
+
+        .detail-arrow {
+            text-align: center;
+        }
+    }
+}
+
+.service-type {
+    width: 1200px;
+    margin: 50px auto 90px;
+    text-align: center;
+    font-size: 0;
+    letter-spacing: -1px;
+
+    .service-item {
+        display: inline-block;
+        vertical-align: top;
+        letter-spacing: normal;
+        word-spacing: normal;
+        padding: 90px 50px 50px;
+        width: 435px;
+        height: 440px;
+        margin: 0 30px;
+        box-shadow: 0 0 5px 0 rgba(124, 137, 143, .2);
+    }
+
+    .service-figure {
+        height: 100px;
+        line-height: 100px;
+
+        img {
+            max-height: 100px;
+            display: inline-block;
+            vertical-align: middle;
+        }
+    }
+
+    .service-title {
+        display: block;
+        font-size: 34px;
+        font-weight: bold;
+        margin-top: 55px;
+        padding-bottom: 30px;
+        position: relative;
+
+        &:after {
+            content: '';
+            display: block;
+            width: 50px;
+            height: 6px;
+            background: @activeColor;
+            border-radius: 3px;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            margin-left: -25px;
+        }
+    }
+
+    .service-detail {
+        font-size: 18px;
+        line-height: 32px;
+        margin-top: 30px;
+    }
+}
+
+.intl-service {
+    background: #EBEFF0;
+    padding: 75px 0 120px;
+
+    .intl-container {
+        width: 1200px;
+        margin: 45px auto 0;
+    }
+
+    .service-map {
+        height: 570px;
+
+        img {
+            display: block;
+        }
+    }
+
+    .service-detail {
+        color: #46566b;
+        font-size: 24px;
+        margin-top: 50px;
+        padding: 0 60px;
+        text-align: center;
+        line-height: 42px;
+    }
+}
