--- a/views/home/home.html
+++ b/views/home/home.html
@@ -1,21 +1,103 @@
 {% extends "../_layout/home/home.html" %}
 
-{% block title %}德速物流-首页{% endblock %}
+{% block title %}德速电商物流-首页{% endblock %}
 
 {% block css %}
-    <link href="/js/lib/swiper/swiper.min.css" rel="stylesheet">
+<link href="/js/lib/swiper/swiper.min.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
-    {# 介绍轮播 #}
-    <div class="swiper-container">
-        <div class="swiper-wrapper">
-            {% for i in [1,2,3,4,5,6] %}
-            <div class="swiper-slide"><img src="/images/banner_0{{ i }}.jpg"></div>
-            {% endfor %}
-        </div>
-        <div class="swiper-pagination swiper-pagination-white"></div>
+
+{# 介绍轮播 #}
+<div class="swiper-container">
+    <div class="swiper-wrapper">
+        {% for i in [1,2,3,4,5,6] %}
+        <div class="swiper-slide"><img src="/images/banner_0{{ i }}.jpg"></div>
+        {% endfor %}
     </div>
+    <div class="swiper-pagination swiper-pagination-white"></div>
+</div>
+
+{# 服务展示 #}
+<div id="service-cont" class="service-container">
+    <h2 class="main-title">全球FBA物流专家</h2>
+    <p class="sub-desc">Global FBA Logistics Expert</p>
+    <div class="figure-list">
+        <div class="figure-item">
+            <div class="item-picture"><img src="/images/home/intro_01.jpg"></div>
+            <div class="item-info">
+                <h3>FBA空派服务</h3>
+                <p class="info-txt">德速FBA空派服务是德速自主设计头程空运，代理清关并UPS/FedEx/DPD派送至美国，欧洲，加拿大FBA仓库及第三方海外仓或私人地址的特色专线产品。</p>
+                <div class="action-btns">
+                    <a href="#" class="detail-link">进入详情<i class="detail-arrow"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="figure-item figure-right-item">
+            <div class="item-info">
+                <h3>FBA海派服务</h3>
+                <p class="info-txt">德速FBA海派服务是德速自主设计头程海运舱位，海运至目的国提至德速海外仓分拣，并UPS/FedEx/DPD派送至美国，欧洲，加拿大FBA仓库及第三方海外仓或私人地址的特色专线产品</p>
+                <div class="action-btns">
+                    <a href="#" class="detail-link">进入详情<i class="detail-arrow"></i></a>
+                </div>
+            </div>
+            <div class="item-picture"><img src="/images/home/intro_02.jpg"></div>
+        </div>
+        <div class="figure-item">
+            <div class="item-picture"><img src="/images/home/intro_03.jpg"></div>
+            <div class="item-info">
+                <h3>FBA海卡服务</h3>
+                <p class="info-txt">德速FBA海卡服务是德速针对欧美FBA仓库不同特点，自主设计的全美十三个仓库直送和欧洲加拿大监管仓拆柜直送的海运加清关卡车派送服务。</p>
+                <div class="action-btns">
+                    <a href="#" class="detail-link">进入详情<i class="detail-arrow"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="figure-item figure-right-item">
+            <div class="item-info">
+                <h3>FBA快递直发服务</h3>
+                <p class="info-txt">德速是国际四大快递代理之一，规范的操作、强大的系统、合理的价格、充足的仓位，有效助您解决亚马逊FBA头程运输的痛点。</p>
+                <div class="action-btns">
+                    <a href="#" class="detail-link">进入详情<i class="detail-arrow"></i></a>
+                </div>
+            </div>
+            <div class="item-picture"><img src="/images/home/intro_04.jpg"></div>
+        </div>
+    </div>
+</div>
+
+{# 物流服务 #}
+<div class="service-container">
+    <h2 class="main-title">电商物流服务</h2>
+    <p class="sub-desc">E-commerce logistics service</p>
+    <div class="service-type clear">
+        <div class="service-item">
+            <div class="service-figure"><img src="/images/sprites/oversease.png"></div>
+            <strong class="service-title">海外仓服务</strong>
+            <div class="service-detail">
+                德速海外仓为卖家提供全球FBA配套服务，包括退货换标和FBA暂存转运服务，服务范围同样也已覆盖了所有亚马逊站点。仓库管理更规范，流程更专业，处理时效有保障，另配有退运方案。
+            </div>
+        </div>
+        <div class="service-item">
+            <div class="service-figure"><img src="/images/sprites/special.png"></div>
+            <strong class="service-title">专线小包服务</strong>
+            <div class="service-detail">
+                德速电商物流旗下倾力打造的直发类产品，定位于为广大平台卖家和自建站卖家提供稳定、快捷、高性价比的门到门直发类小包及小货专线的物流服务。主要产品有美国小包专线、英国小包专线、德国小包专线、国际E邮宝、DHL小货等。
+            </div>
+        </div> 
+    </div>
+</div>
+
+{# 国际物流 #}
+<div class="intl-service">
+    <h2 class="main-title">国际物流服务</h2>
+    <p class="sub-desc">Global Services</p>  
+    <div class="intl-container">
+        <div class="service-map"><img src="/images/home/map.jpg"></div>
+        <p class="service-detail">除了电商物流业务，我们依旧保持在传统国际物流服务行业上的优势领导地位，通过我们发达健全的全球货运网络，为中国出口厂家商家提供全球门到门的空海运国际货运业务。</p>   
+    </div> 
+</div>
+
 {% endblock %}
 
 {% block js %}
