--- a/src/less/about/about.less
+++ b/src/less/about/about.less
@@ -210,6 +210,7 @@
 
             span {
                 float: left;
+                width: 100%;
                 margin-bottom: 20px;
                 overflow: hidden;
             }
