--- a/views/_component/nav.html
+++ b/views/_component/nav.html
@@ -17,7 +17,7 @@
         </div>
         <div class="side-info">
             <a class="btn-primary" href="#">货物追踪</a>
-            <a class="btn-primary" href="#">账号登录</a>
+            <a class="btn-primary" href="http://120.76.59.47:8084/">账号登录</a>
             <span class="contact-phone">在线咨询：400-801-5589</span>
         </div>
     </div>
