--- a/views/fba/fba_base.html
+++ b/views/fba/fba_base.html
@@ -1,4 +1,4 @@
-<div id="base-mod" class="content-item" style="display:none;">
+<div id="base-mod" class="content-item" style="display:block;">
     <h3 class="module-title">FBA专区</h3>
     <div class="content-mod">
         <strong class="sub-cont-title">FBA空派服务</strong>
@@ -27,8 +27,8 @@
     <div class="content-mod">
         <strong class="sub-cont-title">FBA海卡服务</strong>
         <p class="cont-desc">
-                    德速FBA海卡服务是德速针对欧美FBA仓库不同特点，自主设计的全美十三个仓库直送和欧洲加拿大监管仓拆柜直送的海运加清关卡车派送服务。
-                </p>
+            德速FBA海卡服务是德速针对欧美FBA仓库不同特点，自主设计的全美十三个仓库直送和欧洲加拿大监管仓拆柜直送的海运加清关卡车派送服务。
+        </p>
         <div class="advantage-cont">
             <strong class="advantage-title">渠道优势：</strong>
             <p>1. 全美十三个大型FBA的直送服务，成本低，时效快，每周定期出运，解决分仓困扰；</p>
@@ -39,8 +39,8 @@
     <div class="content-mod">
         <strong class="sub-cont-title">FBA快递直发服务</strong>
         <p class="cont-desc">
-                    德速是国际四大快递代理之一，规范的操作、强大的系统、合理的价格、充足的仓位，有效助您解决亚马逊FBA头程运输的痛点。
-                </p>
+            德速是国际四大快递代理之一，规范的操作、强大的系统、合理的价格、充足的仓位，有效助您解决亚马逊FBA头程运输的痛点。
+        </p>
         <div class="advantage-cont">
             <strong class="advantage-title">渠道优势：</strong>
             <p>1. 提供纯商业快递直发双清包税服务，为您有效解决关务和税金的痛点；</p>
