--- a/views/fba/fba_delivery.html
+++ b/views/fba/fba_delivery.html
@@ -1,4 +1,4 @@
-<div id="delivery-mod" class="content-item">
+<div id="delivery-mod" class="content-item" style="display:none;">
     <h3 class="module-title">FBA发货须知</h3>
     <div class="content-mod">
         <strong class="sub-cont-title">分配须知</strong>
@@ -25,11 +25,11 @@
                 <p>
                     <label>卡板：</label>
                     <span>
-                                欧盟标准（欧标卡板/4way，长1.2M *宽0.8M*高1.6M）<br/>
-                                英国标准（欧标卡板/4way，长1.2M *宽0.8M *高1.7M）<br/>
-                                美国标准（美标卡板/4way，长1.2M *宽1M*高1.8M）<br/>
-                                货物超过半个托体积，则需要打托。
-                            </span>
+                        欧盟标准（欧标卡板/4way，长1.2M *宽0.8M*高1.6M）<br />
+                        英国标准（欧标卡板/4way，长1.2M *宽0.8M *高1.7M）<br />
+                        美国标准（美标卡板/4way，长1.2M *宽1M*高1.8M）<br />
+                        货物超过半个托体积，则需要打托。
+                    </span>
                 </p>
             </div>
         </div>
