--- a/src/less/fba/fba.less
+++ b/src/less/fba/fba.less
@@ -9,6 +9,10 @@
     position: relative;
     margin: 0 auto;
     padding: 35px 0 100px 260px;
+
+    .content-item {
+        display: none;
+    }
 }
 
 .fba-nav {
@@ -41,6 +45,12 @@
     font-weight: bold;
 }
 
+.cont-desc {
+    color: @col6;
+    margin-top: 15px;
+    line-height: 28px;
+}
+
 .content-mod {
     margin-top: 25px;
 
@@ -50,10 +60,12 @@
         font-weight: bold;
     }
 
-    .cont-desc {
-        color: @col6;
-        margin-top: 15px;
-        line-height: 22px;
+    a {
+        color: @activeColor;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
 
@@ -87,5 +99,57 @@
 
     span {
         color: @col6;
+    }
+}
+
+.item-figure {
+    margin-top: 10px;
+
+    img {
+        display: inline-block;
+        vertical-align: top;
+        max-width: 100%;
+    }
+}
+
+.special {
+    color: #f8800b;
+    font-weight: normal;
+}
+
+.weaken {
+    color: @col9;
+    font-weight: normal;
+}
+
+.note {
+    color: #e63250;
+    font-weight: bold;
+}
+
+.quote-info {
+    border: 1px solid #E1E9EB;
+    border-radius: 3px;
+    padding: 50px 60px;
+    background: #EDF3FA;
+    margin-top: 10px;
+    line-height: 28px;
+    position: relative;
+
+    .quote-top {
+        position: absolute;
+        top: 15px;
+        left: 20px;
+    }
+
+    .quote-bottom {
+        position: absolute;
+        bottom: 15px;
+        right: 20px;
+    }
+
+    p {
+        position: relative;
+        z-index: 2;
     }
 }
