--- a/src/less/home/home.less
+++ b/src/less/home/home.less
@@ -45,6 +45,7 @@
 
 .figure-list {
     margin-top: 55px;
+    background: #f0f4f5;
 
     .figure-item {
         overflow: hidden;
@@ -78,9 +79,9 @@
         padding: 65px 20px 55px 80px;
 
         h3 {
-            font-size: 36px;
+            font-size: 30px;
             font-weight: bold;
-            padding-bottom: 20px;
+            padding-bottom: 15px;
             position: relative;
 
             &:after {
@@ -97,7 +98,8 @@
     }
 
     .info-txt {
-        min-width: 540px;
+        display: inline-block;
+        width: 550px;
         font-size: 18px;
         line-height: 30px;
         margin-top: 30px;
