change # 修改部分样式

--- a/src/less/about/about.less
+++ b/src/less/about/about.less
@@ -43,7 +43,7 @@
 
     .main-desc {
         font-size: 18px;
-        margin-top: 10px;
+        margin-top: 25px;
         text-indent: 2em;
         line-height: 36px;
 
@@ -191,7 +191,7 @@
 
 .teams-module {
     padding: 50px 0;
-    max-width: 1920px;
+    width: 1200px;
     margin: 0 auto;
 
     .teams-figure {
@@ -200,28 +200,27 @@
         position: relative;
 
         ul {
-            width: 105%;
             overflow: hidden;
             zoom: 1;
-            margin: -20px 0 0 -20px;
+            margin: -15px 0 0 -15px;
         }
 
         li {
             float: left;
-            width: 17%;
-            margin: 20px 0 0 20px;
+            width: 265px;
+            margin: 15px 0 0 15px;
             overflow: hidden;
 
             span {
                 float: left;
                 width: 100%;
-                margin-bottom: 20px;
+                margin-bottom: 15px;
                 overflow: hidden;
             }
 
             .small-figure {
-                width: 48%;
-                margin-left: 20px;
+                width: 191px;
+                margin-left: 15px;
 
                 &:first-child {
                     margin-left: 0;
@@ -241,16 +240,16 @@
             }
         }
 
-        .team420 {
-            width: 20.7%;
+        .team265 {
+            width: 265px;
         }
 
-        .team650 {
-            width: 32.7%;
+        .team400 {
+            width: 400px;
         }
 
-        .team810 {
-            width: 40%;
+        .team505 {
+            width: 505px;
         }
     }
 }
