--- a/views/about/about.html
+++ b/views/about/about.html
@@ -20,7 +20,7 @@
         </div>
         <div class="main-desc">
             <p><em>德速电商物流(广州)有限公司</em>是一家致力于为亚马逊卖家提供全球FBA物流及配套服务的跨境电商物流公司。
-                德速始终以“信任，只因卓越送达”为使命，通过多年探索创新，凭借传统物流转型的优势以及信息化科技投入，为亚马逊卖家提供行业领先的FBA头程运输渠道及供应链管理方案，其中包括空派专线，海派专线，海卡专线以及海外仓服务等增值服务。
+                德速始终以“信任，只因卓越送达”为愿景，通过多年探索创新，凭借传统物流转型的优势以及信息化科技投入，为亚马逊卖家提供行业领先的FBA头程运输渠道及供应链管理方案，其中包括空派专线，海派专线，海卡专线以及海外仓服务等增值服务。
             </p>
             <p>德速电商物流总部位于广州，设有深圳分公司和厦门分公司，宁波和中山设立分支机构；全球合作分支网络辐射洛杉矶、纽约、亚特兰大、伦敦以及阿姆斯特丹。针对亚马逊卖家各种层次需求和各地操作诉求，德速通过全覆盖得海外物流网络，提供一站式综合物流方案，服务覆盖美，英，加，德，法，意，西，日，澳等亚马逊站点。
             </p>
@@ -46,7 +46,7 @@
             <div class="mask">
                 <h3>愿景</h3>
                 <p>
-                    信任，只因卓越送达<br />
+                    信任&nbsp;&nbsp;&nbsp;&nbsp;只因卓越送达<br />
                     <span>DELIVER YOUR TRUST</span>
                 </p>
             </div>
@@ -85,7 +85,7 @@
             </li>
             <li>
                 <label>愿景：</label>
-                信任，只因卓越送达 DELIVER YOUR TRUST
+                信任 只因卓越送达 DELIVER YOUR TRUST
             </li>
             <li>
                 <label>目标：</label>
@@ -106,22 +106,22 @@
     <p class="sub-desc">Our Teams</p>
     <div class="teams-figure">
         <ul>
-            <li class="team420">
-                <span><img src="/images/about/team_01.jpg"></span>
-                <span><img src="/images/about/team_05.jpg"></span>
+            <li class="team265">
+                <span><img src="/images/about/team_group_01.jpg"></span>
+                <span><img src="/images/about/team_group_05.jpg"></span>
             </li>
-            <li class="team810">
-                <span><img src="/images/about/team_02.jpg"></span>
+            <li class="team505">
+                <span><img src="/images/about/team_group_02.jpg"></span>
             </li>
-            <li class="team650">
-                <span class="small-figure"><img src="/images/about/team_03.jpg"></span>
-                <span class="small-figure"><img src="/images/about/team_04.jpg"></span>
-                <span><img src="/images/about/team_06.jpg"></span>
+            <li class="team400">
+                <span class="small-figure"><img src="/images/about/team_group_03.jpg"></span>
+                <span class="small-figure"><img src="/images/about/team_group_04.jpg"></span>
+                <span><img src="/images/about/team_group_06.jpg"></span>
             </li>
         </ul>
     </div>
     <div class="teams-desc">
-        <em>德速电商物流</em>从传统物流转型而来，由原亚马逊高管协同原亚马逊，DHL，UPS等一众精英创立，现拥有一支跨界互补的国际型复合团队，熟知物流、平台、技术、关务与税务，核心团队均有超过10年的从业经验。近年来德速持续地不断投入团队建设和优化软硬件设备，扩大自有海内外网点布局，且不断在管理模式和渠道服务上合规创新。我们的目标是：比卖家更懂物流，比物流更懂平台，比平台更懂卖家。
+        <em>德速电商物流</em>从传统物流转型而来，由原亚马逊高管协同原DHL，UPS，万邑通等一众精英创立，现拥有一支跨界互补的国际型复合团队，熟知物流、平台、技术、关务与税务，核心团队均有超过10年的从业经验。近年来德速持续地不断投入团队建设和优化软硬件设备，扩大自有海内外网点布局，且不断在管理模式和渠道服务上合规创新。我们的目标是：比卖家更懂物流，比物流更懂平台，比平台更懂卖家。
     </div>
 </div>
 {% endblock %}
