--- a/views/home/home.html
+++ b/views/home/home.html
@@ -9,7 +9,7 @@
 {% block content %}
 
 {# 介绍轮播 #}
-<div class="swiper-container">
+<div class="home-ban swiper-container">
     <div class="swiper-wrapper">
         {% for i in [1,2,3,4,5,6] %}
         <div class="swiper-slide"><img src="/images/banner_0{{ i }}.jpg"></div>
@@ -21,24 +21,24 @@
 {# 服务展示 #}
 <div id="service-cont" class="service-container">
     <h2 class="main-title">全球FBA物流专家</h2>
-    <p class="sub-desc">Global FBA Logistics Expert</p>
+    <p class="sub-desc">Global FBA Advanced Logistics Expert</p>
     <div class="figure-list">
         <div class="figure-item">
             <div class="item-picture"><img src="/images/home/intro_01.jpg"></div>
             <div class="item-info">
                 <h3>FBA空派服务</h3>
-                <p class="info-txt">德速FBA空派服务是德速自主设计头程空运，代理清关并UPS/FedEx/DPD派送至美国，欧洲，加拿大FBA仓库及第三方海外仓或私人地址的特色专线产品。</p>
+                <p class="info-txt">德速FBA空派服务是德速自主设计头程空运，代理清关并由UPS/ FedEx/ DPD派送至美国，欧洲，加拿大FBA仓库及第三方海外仓或私人地址的特色专线产品。</p>
                 <div class="action-btns">
-                    <a href="#" class="detail-link">进入详情<i class="detail-arrow"></i></a>
+                    <a href="/fba-business#fba-kp" class="detail-link">进入详情<i class="detail-arrow"></i></a>
                 </div>
             </div>
         </div>
         <div class="figure-item figure-right-item">
             <div class="item-info">
                 <h3>FBA海派服务</h3>
-                <p class="info-txt">德速FBA海派服务是德速自主设计头程海运舱位，海运至目的国提至德速海外仓分拣，并UPS/FedEx/DPD派送至美国，欧洲，加拿大FBA仓库及第三方海外仓或私人地址的特色专线产品</p>
+                <p class="info-txt">德速FBA海派服务是德速自主设计头程海运舱位，海运至目的国提至德速海外仓分拣，并由UPS/ FedEx/ DPD派送至美国，欧洲，加拿大FBA仓库及第三方海外仓或私人地址的特色专线产品</p>
                 <div class="action-btns">
-                    <a href="#" class="detail-link">进入详情<i class="detail-arrow"></i></a>
+                    <a href="/fba-business#fba-hp" class="detail-link">进入详情<i class="detail-arrow"></i></a>
                 </div>
             </div>
             <div class="item-picture"><img src="/images/home/intro_02.jpg"></div>
@@ -49,7 +49,7 @@
                 <h3>FBA海卡服务</h3>
                 <p class="info-txt">德速FBA海卡服务是德速针对欧美FBA仓库不同特点，自主设计的全美十三个仓库直送和欧洲加拿大监管仓拆柜直送的海运加清关卡车派送服务。</p>
                 <div class="action-btns">
-                    <a href="#" class="detail-link">进入详情<i class="detail-arrow"></i></a>
+                    <a href="/fba-business#fba-hk" class="detail-link">进入详情<i class="detail-arrow"></i></a>
                 </div>
             </div>
         </div>
@@ -58,7 +58,7 @@
                 <h3>FBA快递直发服务</h3>
                 <p class="info-txt">德速是国际四大快递代理之一，规范的操作、强大的系统、合理的价格、充足的仓位，有效助您解决亚马逊FBA头程运输的痛点。</p>
                 <div class="action-btns">
-                    <a href="#" class="detail-link">进入详情<i class="detail-arrow"></i></a>
+                    <a href="/fba-business#fba-zf" class="detail-link">进入详情<i class="detail-arrow"></i></a>
                 </div>
             </div>
             <div class="item-picture"><img src="/images/home/intro_04.jpg"></div>
@@ -69,7 +69,7 @@
 {# 物流服务 #}
 <div class="service-container">
     <h2 class="main-title">电商物流服务</h2>
-    <p class="sub-desc">E-commerce logistics service</p>
+    <p class="sub-desc">E-commerce Logistics Service</p>
     <div class="service-type clear">
         <div class="service-item">
             <div class="service-figure"><img src="/images/sprites/oversease.png"></div>
@@ -91,7 +91,7 @@
 {# 国际物流 #}
 <div class="intl-service">
     <h2 class="main-title">国际物流服务</h2>
-    <p class="sub-desc">Global Services</p>  
+    <p class="sub-desc">International Freight Forwarding Service</p>  
     <div class="intl-container">
         <div class="service-map"><img src="/images/home/map.jpg"></div>
         <p class="service-detail">除了电商物流业务，我们依旧保持在传统国际物流服务行业上的优势领导地位，通过我们发达健全的全球货运网络，为中国出口厂家商家提供全球门到门的空海运国际货运业务。</p>   
