--- a/src/less/common/banner.less
+++ b/src/less/common/banner.less
@@ -1,17 +1,12 @@
-.main-nav {
-    background: #011A21;
-}
-
 .main-ban {
-    margin-top: 60px;
-    background: url(/images/main_ban.jpg) no-repeat center top;
+    background: url(/images/fba_main_ban.jpg) no-repeat center top;
 
     .ban-container {
         width: 1200px;
         margin: 0 auto;
         color: #fff;
         min-height: 110px;
-        padding: 90px 0 80px;
+        padding: 110px 0 60px;
 
         strong {
             display: block;
