--- a/src/less/fba/fba.less
+++ b/src/less/fba/fba.less
@@ -8,7 +8,7 @@
     min-height: 360px;
     position: relative;
     margin: 0 auto;
-    padding: 35px 0 100px 260px;
+    padding: 35px 0 100px 220px;
 
     .content-item {
         display: none;
@@ -21,8 +21,13 @@
     position: absolute;
     top: 35px;
     left: 0;
-    bottom: 35px;
-    border-right: 1px solid #E1E9EB;
+
+    &.fixed {
+        position: fixed;
+        top: 60px;
+        left: 50%;
+        margin-left: -580px;
+    }
 
     span {
         padding: 0 20px;
@@ -38,6 +43,11 @@
             color: #fff;
         }
     }
+}
+
+.fba-content {
+    padding-left: 40px;
+    border-left: 1px solid #E1E9EB;
 }
 
 .module-title {
