--- a/src/less/home/home.less
+++ b/src/less/home/home.less
@@ -56,15 +56,19 @@
     .item-info {
         float: left;
         width: 50%;
+        min-width: 505px;
         box-sizing: border-box;
     }
 
     .item-picture {
         overflow: hidden;
+        height: 395px;
 
         img {
             display: block;
-            max-width: 100%;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
             transition: transform 2.6s linear;
         }
 
@@ -76,7 +80,7 @@
     }
 
     .item-info {
-        padding: 65px 20px 55px 80px;
+        padding: 65px 20px 55px 75px;
 
         h3 {
             font-size: 30px;
@@ -99,7 +103,7 @@
 
     .info-txt {
         display: inline-block;
-        width: 550px;
+        max-width: 550px;
         font-size: 18px;
         line-height: 30px;
         margin-top: 30px;
@@ -143,7 +147,7 @@
         }
 
         .item-info {
-            padding: 65px 80px 55px 20px;
+            padding: 65px 75px 55px 20px;
         }
 
         .info-txt {
