--- a/src/less/intl/intl.less
+++ b/src/less/intl/intl.less
@@ -13,6 +13,8 @@
     padding: 110px 140px 80px;
     font-size: 20px;
     line-height: 50px;
+    background: url(/images/logo_gray.png) no-repeat center 60%;
+    background-size: 300px;
     position: relative;
 
     em {
@@ -68,7 +70,6 @@
         }
     }
 
-
     .large-item {
         height: 500px;
     }
@@ -87,7 +88,7 @@
 }
 
 .advantage-note {
-    margin-top: 10px;
+    margin-top: 15px;
     font-size: 18px;
     line-height: 34px;
 
@@ -125,9 +126,35 @@
         height: 80px;
         float: left;
         margin: 40px 0 0 40px;
+        position: relative;
 
         img {
             display: block;
         }
+
+        &:hover {
+            .logo-mask {
+                filter: alpha(opacity=100);
+                opacity: 1;
+            }
+        }
+    }
+
+    .logo-mask {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        color: #fff;
+        font-size: 18px;
+        font-weight: bold;
+        text-align: center;
+        line-height: 80px;
+        filter: progid:DXImageTransform.Microsoft.gradient(enabled="true", startColorstr="#CC005CDA", endColorstr="#CC005CDA");
+        background-color: rgba(0, 92, 218, 0.8);
+        filter: alpha(opacity=0);
+        opacity: 0;
+        transition: all 0.4s ease-in-out;
     }
 }
