--- a/views/home/home.html
+++ b/views/home/home.html
@@ -1,6 +1,6 @@
 {% extends "../_layout/home/home.html" %}
 
-{% block title %}德速电商物流-首页{% endblock %}
+{% block title %}德速电商物流{% endblock %}
 
 {% block css %}
 <link href="/js/lib/swiper/swiper.min.css" rel="stylesheet">
