changed # 修改关于我们模块

--- a/views/fba/fba_eu_vat.html
+++ b/views/fba/fba_eu_vat.html
@@ -72,7 +72,7 @@
                     <p>该法案适用于为欧盟以外的企业从欧盟以外进口货物并在英国提供存储服务的英国服务提供商<b class="special">(也就是说，向海外卖家提供仓储服务的海外仓，都适用于这个法案哦)。</b>
                     </p>
                     <p>
-                        该法案要求符合条件的仓储服务商向英国税务海关总署登记注册，对其海外客户进行严格的尽职调查<b class="weaken">(例如，客户是否有有效的英国增值税(VAT)号)</b>;
+                        该法案要求符合条件的仓储服务商向英国税务海关总署登记注册，对其海外客户进行严格的尽职调查<b class="weaken">(例如，客户是否有有效的英国增值税(VAT)号)</b>；
                         如果发现可能不合规的海外客户，则必须和这些客户停止合作，并且将相关信息告知英国税务海关总署。<br />
                         1)在2018/4/1之前已开展上述业务的服务商必须在 2018/6/30之前向英国税务海关总署注册。<br />
                         2) 在2018/4/1当天或之后开展上述业务的服务商必须在2018/9/30之前向英国税务海关总署登记注册。
