--- a/src/less/common/nav.less
+++ b/src/less/common/nav.less
@@ -64,10 +64,11 @@
     }
 
     .side-info {
-        float: left;
+        position: absolute;
         padding: 14px 0;
-        margin-right: -150px;
-        margin-left: 85px;
+        left: 50%;
+        min-width: 350px;
+        margin-left: 345px;
         font-size: 0;
         letter-spacing: -1px;
         line-height: 30px;
