--- a/src/less/fba/fba.less
+++ b/src/less/fba/fba.less
@@ -163,3 +163,44 @@
         z-index: 2;
     }
 }
+
+.address-mod {
+    overflow: hidden;
+
+    ul {
+        overflow: hidden;
+        width: 1200px;
+    }
+
+    li {
+        float: left;
+        width: 458px;
+        margin-right: 20px;
+    }
+
+    .table-item {
+        margin-bottom: 20px;
+    }
+
+    table {
+        width: 100%;
+        border: 1px solid #99a6b6;
+
+        th,
+        td {
+            border: 1px solid #99a6b6;
+            line-height: 32px;
+            text-align: center;
+            padding: 0 15px;
+        }
+
+        .tb-header {
+
+            th,
+            td {
+                background: #99a6b6;
+                color: #fff;
+            }
+        }
+    }
+}
