--- a/views/_component/footer.html
+++ b/views/_component/footer.html
@@ -8,6 +8,7 @@
                 <dd>联系邮箱：info@deksu.com</dd>
                 <dd>广州总部：广州市越秀区建设八马路33号宜安广场1708房</dd>
                 <dd>深圳分公司：深圳市龙华新区龙环三路329号金禾田商务中心4楼J427</dd>
+                <dd>厦门分公司：厦门市湖里区象屿保税区自贸时代广场B栋416</dd>
                 <dd class="footer-logo">
                     <img src="/images/logo.png" alt="德速电商物流">
                 </dd>
