--- a/views/about/about.html
+++ b/views/about/about.html
@@ -5,7 +5,7 @@
 {% import "../_component/banner.html" as banner %}
 
 {% block content %}
-{{ banner.setInfo('关于德速','DELIVER YOUR TRUST信任，只因卓越送达') }}
+{{ banner.setInfo('关于德速','DELIVER YOUR TRUST&nbsp;&nbsp;信任&nbsp;&nbsp;只因卓越送达') }}
 <div class="module-nav">
     <a href="#about">公司简介</a> /
     <a href="#culture">企业文化</a> /
@@ -70,7 +70,7 @@
                     敬畏 - 敬畏市场，敬畏客户，始终保持谦虚之心砥砺前行<br />
                     团结 - 团队精神，牺牲精神，始终怀有协作之心克服困难<br />
                     创新 - 效率创新，模式创新，始终保持学习之心求索不止<br />
-                    业绩 -业绩为王，结果导向，始终怀有争冠之心勇攀高峰
+                    业绩 - 业绩为王，结果导向，始终怀有争冠之心勇攀高峰
                 </p>
             </div>
         </div>
@@ -96,7 +96,7 @@
                 敬畏 - 敬畏市场，敬畏客户，始终保持谦虚之心砥砺前行<br />
                 团结 - 团队精神，牺牲精神，始终怀有协作之心克服困难<br />
                 创新 - 效率创新，模式创新，始终保持学习之心求索不止<br />
-                业绩 -业绩为王，结果导向，始终怀有争冠之心勇攀高峰。
+                业绩 - 业绩为王，结果导向，始终怀有争冠之心勇攀高峰。
             </li>
         </ul>
     </div>
