--- a/views/fba/fba.html
+++ b/views/fba/fba.html
@@ -10,7 +10,7 @@
     <div class="fba-nav">
         <span href="#base-mod" class="active">FBA专区</span>
         <span href="#delivery-mod">FBA发货须知</span>
-        <span href="#">FBA仓库地址</span>
+        <span href="#address-mod">FBA仓库地址</span>
         <span href="#USA-mod">美国关税查询方式</span>
         <span href="#EU-mod">欧洲关税查询方式</span>
         <span href="#EUVAT-mod">欧洲VAT计算方式</span>
@@ -19,6 +19,8 @@
         {% include "./fba_base.html" %}
 
         {% include "./fba_delivery.html" %}
+
+        {% include "./fba_address.html" %}
 
         {% include "./fba_usa.html" %}
 
