--- a/views/intl/intl.html
+++ b/views/intl/intl.html
@@ -8,9 +8,12 @@
     {{ banner.setInfo('国际物流业务','优质强势的空海运航线资源，分布全球的优质代理网络') }}
     <div class="intl-container">
         <div class="advantage-info">
-            <i class="quote quote-top"></i>
-            <i class="quote quote-bottom"></i>
-            <em>德捷国际物流，</em>作为德速投资子公司，依靠传统优势的空海运航线资源，以及分布全球的优质代理网络，为中国出口厂家商家提供全球门到门的空海运国际货运业务。
+            <div class="dejie-logo">
+                <img src="/images/dj_logo.png" alt="德捷国际物流">
+            </div>
+            <p>
+                <em>德捷国际物流，</em>作为德速投资子公司，依靠传统优势的空海运航线资源，以及分布全球的优质代理网络，为中国出口厂家商家提供全球门到门的空海运国际货运业务。
+            </p>
         </div>
         <div class="advantage-container">
             <h3 class="main-title">优势航线</h3>
