--- a/src/less/intl/intl.less
+++ b/src/less/intl/intl.less
@@ -10,28 +10,29 @@
 }
 
 .advantage-info {
-    padding: 110px 140px 80px;
+    padding: 70px;
     font-size: 20px;
     line-height: 50px;
-    background: url(/images/logo_gray.png) no-repeat center 60%;
-    background-size: 300px;
     position: relative;
+
+    p {
+        margin-top: 35px;
+    }
 
     em {
         font-size: 32px;
         font-weight: bold;
     }
 
-    .quote-top {
-        position: absolute;
-        top: 35px;
-        left: 35px;
-    }
+    .dejie-logo {
+        height: 200px;
+        text-align: center;
 
-    .quote-bottom {
-        position: absolute;
-        bottom: 35px;
-        right: 35px;
+        img {
+            display: inline-block;
+            vertical-align: top;
+            max-height: 100%;
+        }
     }
 }
 
