--- a/views/_component/banner.html
+++ b/views/_component/banner.html
@@ -1,8 +1,8 @@
 {% macro setInfo(title, info) %}
     <div class="main-ban">
         <div class="ban-container">
-            <strong>{{ title }}</strong>
-            <p>{{ info }}</p>
+            <strong>{{ title | safe }}</strong>
+            <p>{{ info | safe }}</p>
         </div>
     </div>
 {% endmacro %}
