--- a/views/fba/fba_address.html
+++ b/views/fba/fba_address.html
@@ -1,4 +1,5 @@
 <div id="address-mod" class="content-item address-mod">
+        <h3 class="module-title">FBA仓库地址</h3>
             <ul>
                 <li>
                     <div class="table-item">
