--- a/src/less/common/nav.less
+++ b/src/less/common/nav.less
@@ -16,6 +16,7 @@
         width: 1200px;
         margin: 0 auto;
         position: relative;
+        white-space: nowrap;
     }
 
     .site-logo {
