--- a/src/less/intl/intl.less
+++ b/src/less/intl/intl.less
@@ -10,7 +10,7 @@
 }
 
 .advantage-info {
-    padding: 70px;
+    padding: 100px 70px 70px;
     font-size: 20px;
     line-height: 50px;
     position: relative;
