--- a/src/less/common/nav.less
+++ b/src/less/common/nav.less
@@ -65,14 +65,15 @@
     }
 
     .side-info {
-        position: absolute;
         padding: 14px 0;
-        left: 50%;
         min-width: 350px;
-        margin-left: 345px;
         font-size: 0;
         letter-spacing: -1px;
         line-height: 30px;
+        position: absolute;
+        left: 50%;
+        top: 0;
+        margin-left: 345px;
 
         .btn-primary,
         .contact-phone {
