changed # 顶栏跳转链接修改

--- a/views/contact/contact.html
+++ b/views/contact/contact.html
@@ -81,7 +81,7 @@
 </div>
 <div class="navigate-container">
     <h3 class="main-title">导航我们</h3>
-    <p class="sub-desc">Navigate us</p>
+    <p class="sub-desc">Navigate Us</p>
     <div class="map-content">
         <div id="allmap" class="map-box"></div>
         <div class="mark-list">
