Changed # 修改导航栏连接

--- a/src/less/common/nav.less
+++ b/src/less/common/nav.less
@@ -85,7 +85,8 @@
         }
 
         .btn-primary {
-            width: 82px;
+            min-width: 60px;
+            padding: 0 8px;
             height: 30px;
             color: #fff;
             text-align: center;
