Changed # 导航条调整

--- a/src/less/common/nav.less
+++ b/src/less/common/nav.less
@@ -66,14 +66,14 @@
 
     .side-info {
         padding: 14px 0;
-        min-width: 350px;
+        width: 380px;
         font-size: 0;
         letter-spacing: -1px;
         line-height: 30px;
         position: absolute;
         left: 50%;
         top: 0;
-        margin-left: 345px;
+        margin-left: 290px;
 
         .btn-primary,
         .contact-phone {
