--- a/views/_component/nav.html
+++ b/views/_component/nav.html
@@ -16,9 +16,9 @@
             <a href="/contact">联系我们</a>
         </div>
         <div class="side-info">
-            <a class="btn-primary" href="http://120.76.59.47:8887/">货物追踪</a>
-            <a class="btn-primary" href="http://120.76.59.47:8887/">账号登录</a>
+            <a class="btn-primary" href="http://120.76.59.47:8887/">货运账号登录</a>
             <a class="btn-primary" href="http://wms.deksu.com/cusoms">海外仓账号登录</a>
+            <a class="contact-phone" href="tel:400-801-5589">在线咨询：400-801-5589</a>
         </div>
     </div>
 </div>
