Changed # 导航栏修改

--- a/views/_component/nav.html
+++ b/views/_component/nav.html
@@ -16,8 +16,9 @@
             <a href="/contact">联系我们</a>
         </div>
         <div class="side-info">
-            <a class="btn-primary" href="http://120.76.59.47:8887/">货运账号登录</a>
-            <a class="btn-primary" href="http://wms.deksu.com/cusoms">海外仓账号登录</a>
+            <a class="btn-primary" href="http://120.76.59.47:8887/">货运系统登录</a>
+            <a class="btn-primary" href="http://47.112.182.11:8080/new_index.jsp?retry_reason=PASSWORD">小包系统登录</a>
+            <a class="btn-primary" href="http://wms.deksu.com/cusoms">海外仓系统登录</a>
             <a class="contact-phone" href="tel:400-801-5589">在线咨询：400-801-5589</a>
         </div>
     </div>
