changed # 修改联系方式

--- a/views/_component/footer.html
+++ b/views/_component/footer.html
@@ -6,9 +6,9 @@
                 <dt><b>联系我们</b> / Contact us</dt>
                 <dd>联系电话：020-89280213</dd>
                 <dd>联系邮箱：info@deksu.com</dd>
-                <dd>广州总部：广州市越秀区建设八马路33号宜安广场1708房</dd>
+                <dd>广州总部：广州市越秀区建设六马路33号宜安广场708-710</dd>
                 <dd>深圳分公司：深圳市龙岗区坂田街道中兴路11号城市山海中心C栋4楼418</dd>
-                <dd>厦门分公司：厦门市湖里区象屿保税区自贸时代广场B栋416</dd>
+                <dd>厦门分公司：福建省厦门片区长虹路29号跨境电商产业园2号楼307室</dd>
                 <dd class="footer-logo">
                     <img src="/images/logo.png" alt="德速电商物流">
                 </dd>
