--- a/views/contact/contact.html
+++ b/views/contact/contact.html
@@ -13,7 +13,7 @@
         <ul class="clear">
             <li class="whole-item">
                 <strong class="contact-name">德速电商物流（广州）有限公司</strong>
-                <p class="contact-address">广州市越秀区建设六马路33号宜安广场1708</p>
+                <p class="contact-address">广州市越秀区建设六马路33号宜安广场708-710</p>
                 <div class="contact-personal">
                     <span class="persoan-name">Toby Zou</span>
                     <p class="contact-item contact-phone">13538945698</p>
@@ -34,19 +34,17 @@
             </li>
             <li>
                 <strong class="contact-name">德速电商物流（广州）有限公司厦门分公司</strong>
-                <p class="contact-address">厦门市湖里区象屿保税区自贸时代广场B栋416</p>
+                <p class="contact-address">福建省厦门片区长虹路29号跨境电商产业园2号楼307室</p>
                 <div class="contact-personal">
-                    <span class="persoan-name">Max Lai</span>
-                    <p class="contact-item contact-phone">18529131070</p>
-                    <p class="contact-item contact-email">max.lai@deksu.com</p>
+                    <span class="persoan-name">Tata Wang</span>
+                    <p class="contact-item contact-phone">18928769110</p>
+                    <p class="contact-item contact-email">Tata.wang@deksu.com</p>
                 </div>
             </li>
             <li>
                 <strong class="contact-name">德速电商物流广州仓</strong>
-                <p class="contact-address">广州市白云区七星岗环岗一路1号A栋A2单元（可导航至“德速电商物流广州仓”）</p>
+                <p class="contact-address">广州市白云区鹤边员村北街25号C栋</p>
                 <div class="contact-personal">
-                    <span class="persoan-name">陈伟林/ 任伟聪</span>
-                    <p class="contact-item contact-phone">15521263433/ 13711488484</p>
                     <p class="contact-item contact-time">
                         仓库收货时间：<br />
                         周一至周五：10:00-22:00（22:00后到仓，视情况处理）<br />
@@ -59,8 +57,6 @@
                 <strong class="contact-name">德速电商物流深圳仓</strong>
                 <p class="contact-address">深圳市龙岗区凤凰大道668号深圳喜年实业发展园区1号仓库</p>
                 <div class="contact-personal">
-                    <span class="persoan-name">何武辉/ 叶子良</span>
-                    <p class="contact-item contact-phone">18025332260/ 18100275161</p>
                     <p class="contact-item contact-time">
                         仓库收货时间：<br />
                         周一至周五：10:00-22:00（22:00后到仓，视情况处理）<br />
